# agent-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: README.md
.claude/workflows/: improve-loop.js  optimize-bench.js  optimize-suite.js
agent_sdk/: __init__.py  _blocks.py  activable.py  agent.py  bench.py  engine.py  engine_context.py  events.py  flow_def.py  inspection.py  mcp.py  metacognition_facade.py  probe.py  report.py  result.py  selection.py  serve.py  session.py  signals.py  skill_def.py  skill_runtime.py  skills.py  spec.py  stage_overrides.py  stages.py  viewer.py
agent_sdk/assets/: viewer.html
agent_sdk/clients/: __init__.py  anthropic_client.py  base.py  fake.py  messages.py  minimax_client.py  mixed.py  openai_client.py  openai_tools.py
agent_sdk/cognition/: __init__.py
agent_sdk/context/: __init__.py  context.py
agent_sdk/contracts/: llm.py  memo.py  pins.py  services.py  tools.py  turn.py
agent_sdk/expression/: __init__.py
agent_sdk/flows/: compat.py  defaults.py  flow.py  registry.py
agent_sdk/guards/: __init__.py  answer_guard.py  refusal.py  safety.py
agent_sdk/lobes/: __init__.py  network.py  patterns.py  registry.py  rows.py  runtime.py  weights.py
agent_sdk/memory/: __init__.py  durable.py  establish.py  golden_head.py  prefetch.py  recall_tool.py  scratchpad.py  semantic_cache.py  summarize.py  universal.py
agent_sdk/metacognition/: __init__.py  controller.py  model.py  monitor.py  regulator.py
agent_sdk/network/: activation.py  context_builder.py
agent_sdk/paths/: __init__.py  clarify.py  common.py  onboarding.py  relational.py  research.py
agent_sdk/plugins/: __init__.py  base.py  registry.py
agent_sdk/preact/: __init__.py  defaults.py  lobes.py  production.py
agent_sdk/react/: __init__.py  conversation.py  docguard.py  docworkspace.py  funnel.py  grounding.py  hedge.py
agent_sdk/skills/: __init__.py  cache.py  compiler.py  context.py  definition.py  loader.py  packs.py  parser.py  (+2 more)
benchmarks/: MIGRATION.md  README.md  ci-free-gates.sh
docs/: README.md  api.md  building-a-harness.md  contracts.md  porting.md  preact.md
tests/: test_agent_e2e.py  test_answer_leak_guard.py  test_bench_plugins_serve.py  test_blocks_smoke.py  test_capability_resolver.py  test_chat_network.py  test_chat_plugin.py  test_citation_backfill.py  test_clients.py  test_default_efficiency.py  test_docguard.py  test_engine_map.py  test_engine_robustness.py  test_events_result.py  test_extra_coverage.py  test_fanout_robustness.py  test_finalize_hook.py  test_funnel_workingset.py  test_grounding.py  test_hedge_retry.py  test_host_integration_seams.py  test_host_integration_seams2.py  test_mcp.py  test_memory_index.py  test_memory_session.py  test_navigator.py  test_openai_protocol.py  test_openai_tools.py  test_output_filter.py  test_phase0.py  test_planning.py  test_plugin_registry.py  test_plugins_full_surface.py  test_probe_report.py  test_prompt_format.py  test_prompt_sections.py  test_refusal_gate.py  test_reply_flow.py  test_sdk_isolation.py  test_semantic_recall.py  (+19 more)
(+288 files in other folders)
